HelloUltraviolet/Fixtures/RejectedSource/Comptime/UnknownDeriveTarget/Expected.uv
//! Expected diagnostic metadata for the UnknownDeriveTarget rejected-source specimen.

expectedDiagnostic("E-CTE-0310", "requirement.22.DeriveTargetNameResolution")
